<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="24dp"
        android:text="@string/hangout"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="22pt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="21dp"
        android:text="@string/txtWhere"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14pt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        android:textSize="13pt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="34dp"
        android:text="@string/txtwhere"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14pt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="16dp"
        android:text="@string/day"
        android:textSize="13pt" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="34dp"
        android:text="@string/txtdis"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14pt" />

    <Button
        android:id="@+id/btnRegisterHangout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="46dp"
        android:layout_toRightOf="@+id/textView5"
        android:onClick="Send"
        android:text="@string/btnSubmitAct"
        android:textSize="16pt" />

    <EditText
        android:id="@+id/etfavgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etage"
        android:layout_alignTop="@+id/textView6"
        android:ems="10"
        android:editable="false" />

    <EditText
        android:id="@+id/etage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etfavgame"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:hint="@string/hintTime" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etwhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/textView1"
        android:ems="10"
        android:hint="@string/hintWhere" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hintDisc" />

    <Button
        android:id="@+id/btnCreateHangouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnRegisterHangout"
        android:layout_below="@+id/btnRegisterHangout"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/btnDeleteAct"
        android:textSize="16pt" />

</RelativeLayout>