<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regstd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterStd" >

    <EditText
        android:id="@+id/etfavgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" />

    <EditText
        android:id="@+id/etnat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:ems="10" />

    <Button
        android:id="@+id/btnRegisterStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="22dp"
        android:onClick="Send"
        android:text="@string/btnRegStd"
        android:textSize="15pt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="19dp"
        android:text="@string/txtfavgame"
        android:textSize="14pt" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="@string/txtinfo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20pt" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="60dp"
        android:text="@string/txtname"
        android:textSize="14pt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:text="@string/StudentID"
        android:textSize="14pt" />

    <EditText
        android:id="@+id/etconatact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="15dp"
        android:text="@string/txtnationality"
        android:textSize="14pt" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/etname"
        android:text="@string/txtage"
        android:textSize="14pt" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="17dp"
        android:text="@string/txtcontact"
        android:textSize="14pt" />

    <Button
        android:id="@+id/btnCreateHangouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnRegisterStudents"
        android:layout_alignRight="@+id/btnRegisterStudents"
        android:layout_below="@+id/btnRegisterStudents"
        android:layout_marginTop="36dp"
        android:onClick="activity2"
        android:text="@string/btnViewStd"
        android:textSize="15pt" />

    <EditText
        android:id="@+id/StdID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/etconatact"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/etage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etname"
        android:layout_toRightOf="@+id/TextView02"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView02"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:focusable="true" />

    <Button
        android:id="@+id/btnGUC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCreateHangouts"
        android:layout_alignRight="@+id/btnCreateHangouts"
        android:layout_below="@+id/btnCreateHangouts"
        android:layout_marginTop="18dp"
        android:text="@string/btnDeleteAct"
        android:textSize="15pt" />

</RelativeLayout>