<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/party1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities"
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignParentTop="true"
        android:text="@string/enjoy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18pt" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="68dp"
        android:text="@string/txtselectday"
        android:textSize="16pt" />

    <Button
        android:id="@+id/btnViewHangouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="123dp"
        android:onClick="viewHang"
        android:text="@string/viewHangouts"
        android:textSize="15pt" />

    <Button
        android:id="@+id/btnCreateHangouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnViewHangouts"
        android:layout_alignRight="@+id/btnViewHangouts"
        android:layout_below="@+id/btnViewHangouts"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="72dp"
        android:onClick="hello"
        android:text="@string/createHangout"
        android:textSize="15pt" />

</RelativeLayout>