<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gucpic"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity1" >

    <Button
        android:id="@+id/btnStudentss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="75dp"
        android:layout_marginTop="66dp"
        android:enabled="true"
        android:onClick="RegStudents"
        android:text="@string/btnInterStd"
        android:textSize="18pt" />

    <Button
        android:id="@+id/btnHangouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStudentss"
        android:layout_alignRight="@+id/btnStudentss"
        android:layout_below="@+id/btnStudentss"
        android:layout_marginTop="57dp"
        android:enabled="true"
        android:onClick="Hangouts"
        android:text="@string/btnActivities"
        android:textSize="18pt" />

    <Button
        android:id="@+id/btnGUC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnHangouts"
        android:layout_alignRight="@+id/btnHangouts"
        android:layout_below="@+id/btnHangouts"
        android:layout_marginTop="63dp"
        android:onClick="MAP"
        android:text="@string/btnMap"
        android:textSize="18pt" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnStudentss"
        android:layout_marginTop="86dp"
        android:text="@string/txtGjovik"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="26pt" />

    <Button
        android:id="@+id/btnHIGFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGUC"
        android:layout_alignRight="@+id/btnGUC"
        android:layout_below="@+id/btnGUC"
        android:layout_marginTop="82dp"
        android:onClick="Download"
        android:text="HIG"
        android:textSize="18pt" />

</RelativeLayout>
